SVN
---

* [fabien] better cache support
* [fabien] safeguard for recursive slots
* [fabien] added the possibility to disable the web debug sidebar for specific action (RSS, XML, SVG, ...)

Version 0.4.2
-------------

* [fabien] changed default suffix from .html to / (breaks backward compatibility)
* [fabien] added configurable suffix by route (with directory and no suffix support) and enforced one URL for one ressource
* [fabien] dev environment is much faster
* [fabien] better debug sidebar
* [fabien] better i18n support (variable substitution)
* [fabien] lot a small fixes for Windows users
* [fabien] extended error messages support
* [fabien] new helpers:
           * objects_for_select
           * button_to (patch from francois)
* [fabien] automatic support for created_at and updated_at columns (Propel + generator)
* [fabien] renamed internal Log class to sfLog to avoid class name collision
* [fabien] removed tiny mce from symfony package
* [fabien] rich text support (tinymce) for textarea_tag helper
* [marc]   IIS support
* [fabien] module helpers support (lib/helper directory of a module)
* [fabien] many symfony generators enhancements:
           * refactoring
           * propel CRUD (primary id != id, foreign keys, multi primary keys, post link and confirm for delete, ...)
* [fabien] better Ajax support (prototype and script.aculo.us)
* [fabien] support for non virtual host configurations
* [fabien] easier helpers debugging

Version 0.4.1
-------------

Initial public release